--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# VSCode
+.vscode/
+
+# IntelliJ/Webstorm/Goland
+.idea
+
+# OS X
+.DS_Store
