--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -29,4 +29,10 @@ db:
   name: "db_apiserver"
   addr: "127.0.0.1:3306"
   username: "root"
-  password: "root"
+  password: "123456"
+
+docker_db:
+  name: "db_apiserver"
+  addr: "127.0.0.1:3306"
+  username: "root"
+  password: "123456"
